--- a/src/styles/SearchPage.css
+++ b/src/styles/SearchPage.css
@@ -1,6 +1,7 @@
 /* SEARCH PAGE STYLES */
 
 .search-page {
+margin-bottom: 80px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
